# the-poc

./: .editorconfig  .env  .eslintignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc.cjs  TODO.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: code-check.yml
.hurl/: commerce.hurl  dev.hurl  local.hurl
.husky/: pre-commit
.run/: Fastify server.run.xml
apps/server/axum/: Cargo.toml
apps/server/axum/src/: main.rs
apps/server/fastify/: README.md  package.json  tsconfig.json
apps/server/fastify/src/: root.ts  server.ts
apps/web-astro/: astro.config.mjs  package.json  tailwind.config.ts  tsconfig.json  worker-configuration.d.ts  wrangler.toml
apps/web-astro/src/: cached-worker.ts  env.d.ts  timer.ts
apps/web-astro/src/components/: Card.astro
apps/web-astro/src/layouts/: Layout.astro
apps/web-astro/src/middleware/: cache.ts  index.ts  pass-through-routes.ts  (+3 more)
apps/web-next/: .env  .gitignore  Dockerfile  env.d.ts  next.config.js  package.json  tsconfig.json  wrangler.toml
apps/web-next/src/: middleware.ts
apps/web/next/: .eslintrc.js  package.json
apps/web/qwik/: .eslintrc.js  package.json  panda.config.ts  tsconfig.json
config/typescript/: tsconfig.base.json
projects/server/express/: package.json  pnpm-lock.yaml  tsconfig.json  webpack.build.js
projects/server/fastify/: package.json  pnpm-lock.yaml  script.ts  tsconfig.json
projects/server/koa/: package.json  pnpm-lock.yaml
projects/web/next/: package.json  tsconfig.json
(+64 files in other folders)
